--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
+.main-container {
+  background-color: #45475a;
+  min-height: 99vh;
+  height: 100%;
+  width: 100%;
+  padding: 0;
+}
+
+.body-container {
+  margin: 0;
+  padding-top: 10px;
+  padding: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.body-container h1 {
+  color: #fff;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input-button-container {
   display: flex;
   flex-direction: column;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: space-between;
+}
+
+.input-button-container > div {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: #fff;
+  border-radius: 4px;
+  cursor: text;
 }
 
-.App-link {
-  color: #61dafb;
+.input-button-container > div > div {
+  overflow: hidden;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.input-button-container > div > div > input {
+  padding-top: 2px;
+  padding-bottom: 2px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+  font-size: 20px;
+  padding: 5px;
+  overflow: hidden;
+  box-sizing: content-box;
+}
+
+.input-button-container > div > span {
+  font-size: 20px;
+  margin: 0;
+  margin: auto 0;
+}
+
+@media screen and (min-width: 560px) {
+  .input-button-container input {
+    max-width: 60%;
   }
-  to {
-    transform: rotate(360deg);
-  }
+}
+
+.input-button-container button {
+  width: fit-content;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 1px;
+  border-radius: 4px;
+  border: none;
+  background-color: #6273a4;
+  color: #fff;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+.todo-list-container {
+  margin-top: 5%;
+}
+
+.todo-item-container {
+  margin-bottom: 10px;
+  background-color: #6273a4;
+  border-radius: 5px;
+  color: #fff;
+  padding: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.todo-item-container > p {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 0;
+}
+
+.todo-item-container > div {
+  display: flex;
+  align-items: center;
+}
+
+.todo-item-container > div > button {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
 }
