--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   height: 100%;
   width: 100%;
   padding: 0;
+  overflow: hidden;
 }
 
 .body-container {
@@ -41,16 +42,15 @@
 }
 
 .input-button-container > div > div > input {
-  padding-top: 2px;
-  padding-bottom: 2px;
-  padding: 10px;
+  padding: 2px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   border: none;
   outline: none;
   border-radius: 4px;
   font-size: 20px;
-  padding: 5px;
-  overflow: hidden;
-  box-sizing: content-box;
+  max-width: 80%;
+  /* border: 1px solid; */
 }
 
 .input-button-container > div > span {
@@ -95,10 +95,15 @@
   align-items: center;
   justify-content: space-between;
 }
-.todo-item-container > p {
+
+.wrapped-text {
+  white-space: normal;
+  word-break: break-all;
   font-size: 18px;
   font-weight: 600;
   margin: 0;
+  width: 80%;
+  white-space: normal;
 }
 
 .todo-item-container > div {
